TEST_PROGRAMS/VALID/prabhjot_sandhu/power.min
# calculate power of a number
var base:int;
var exp:int;
var value:int;

read base;
read exp;

value = 1;

while exp do
  value = value * base;
  exp = exp - 1;
done

print value;



