TEST_PROGRAMS/INVALID/hongji_chen/invalidOperation.min
#invalid operation

var a : int;

print read a;

